# pan3d

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.binder/: apt.txt  requirements.txt
.github/workflows/: docker.yml  docker_image.yml  test.yml  test_and_release.yml
binder/: apt.txt  requirements.txt  start
design/mockups/: pan3d_mockup.py  requirements.txt  strawman-viz1.ipynb
docker/: DEPLOY.md  Dockerfile  README.md  cloud.Dockerfile  cloud_entrypoint.sh
docker/scripts/: build_image.sh  run_image.sh
docker/setup/: apps.yml  initialize.sh
docs/: README.md  requirements.txt
docs/api/: configuration.md  dataset_builder.md  dataset_viewer.md
docs/tutorials/: catalogs.md  command_line.md  dataset_viewer.md  explorers.md  jupyter_notebook.md  local_server.md  viewer.md
examples/: example_config.json  example_config_2.json  example_config_cmip.json  example_config_esgf.json  example_config_noaa.json  example_config_pangeo.json  example_config_tutorial.json  example_config_xarray.json  example_dataset.nc  example_slice_explorer.py  pangeo_catalog.json  slice_explorer.py
examples/data/: esgf.json  pangeo.json  tas_Amon_ACCESS-ESM1-5_historical_r10i1p1f1_gn_185001-201412.nc
examples/jupyter/: Dockerfile  README.md  advanced_pyvista_rendering.ipynb  apt.txt  bookmark.ipynb  computed_field.ipynb  example_slice_explorer.ipynb  import_config.ipynb  import_config_esgf.ipynb  import_config_pangeo.ipynb  import_config_xarray.ipynb  janelia_cosem_dataset.ipynb  manual_config.ipynb  no_viewer.ipynb  pangeo_forge.ipynb  pflotran_extend_pipeline.ipynb  requirements.txt  show.ipynb  slice_explorer.ipynb  test-xarray.ipynb  tutorial-xarray-viewer.ipynb  url_config.ipynb  viewer_state.ipynb  xarray-analytics.ipynb  xarray-globe.ipynb  xarray-preview.ipynb  xarray-pyvista.ipynb  xarray-slicer.ipynb
pan3d/: __dataset_viewer.py  __init__.py  __main__.py  dataset_builder.py  dataset_viewer.py  esgf.py  jupyter.py  pangeo.py  pangeo_forge.py  serve_geotrame.py  serve_viewer.py  ui.py  utils.py  viewer.py
pan3d-js/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  vite.config.js
pan3d-js/src/components/: PreviewBounds.js  index.js
pan3d/catalogs/: __init__.py  esgf.py  janelia.py  pangeo.py  url.py  xarray.py
pan3d/custom/: contour.py
pan3d/explorers/: analytics.py  contour.py  data_viewer.py  filters.py  globe.py  slice_explorer.py  slicer.py  utilities.py  xr-globe.py
pan3d/filters/: globe.py
pan3d/ui/: __init__.py  analytics.py  axis_configure.py  axis_drawer.py  axis_selection.py  bounds_configure.py  catalog_search.py  common.py  contour.py  coordinate_configure.py  custom.css  file_select.py  globe.py  main_drawer.py  preview.py  render_area.py  render_options.py  slicer.py  toolbar.py  vtk_view.py
pan3d/ui/css/: base.py  preview.css  vtk_view.css
pan3d/ui/pan3d_components/: widgets.py
pan3d/ui/pan3d_components/module/: __init__.py
pan3d/ui/vue/: vite.config.js
pan3d/ui/vue/src/components/: PreviewBounds.js
pan3d/utils/: common.py  constants.py  convert.py  globe.py  presets.json  presets.py
pan3d/utils/data/: continents.vtk
pan3d/utils/data/globe_textures/: source.md
pan3d/viewer/: __main__.py  engine.py  jupyter.py  ui.py  utils.py
pan3d/viewers/: catalog.py  preview.css  preview.py
pan3d/xarray/: __init__.py  __source.py  accessor.py  algorithm.py  datasets.py  io.py  vtk.py  vtk_data_model.py
pan3d/xarray/cf/: __main__.py  constants.py  reader.py  utils.py
pan3d/xarray/cf/coords/: convert.py  coords_mesh_rectilinear.py  coords_mesh_spherical.py  coords_mesh_unstructured.py  index_mapping.py  meta.py  parametric_vertical.py
pan3d/xarray/cf/mesh/: __init__.py  rectilinear.py  structured.py  uniform.py  unstructured.py
pan3d/xarray/cf/usecases/: rom.py
src/: MANIFEST.in  README.rst  setup.cfg
src/.github/workflows/: test_and_release.yml
src/docker/: DEPLOY.md  Dockerfile  build.Dockerfile
src/docker/scripts/: build_image.sh  build_server.sh  run_server.sh
src/docker/setup/: apps.yml  initialize.sh  requirements.txt
src/examples/jupyter/: show.ipynb
src/pan3d/: __init__.py
src/pan3d/catalogs/: __init__.py  esgf.py  file.py  pangeo.py  xarray.py
src/pan3d/custom/: contour.py
src/pan3d/explorers/: analytics.py  contour.py  globe.py  slicer.py
src/pan3d/filters/: globe.py
src/pan3d/ui/: __file_select.py  analytics.py  catalog_search.py  collapsible.py  contour.py  control_panel.py  globe.py  layouts.py  preview.py  rendering_settings.py  shared_components.py  slicer.py  vtk_view.py
src/pan3d/ui/css/: preview.css  preview.py  vtk_view.css  vtk_view.py
src/pan3d/utils/: common.py  convert.py  globe.py  presets.py
src/pan3d/utils/data/globe_textures/: source.md
src/pan3d/viewer/: __init__.py  __main__.py  engine.py  jupyter.py  ui.py
src/pan3d/viewer/core/: data_sources.py  grids.py
src/pan3d/viewer/module/: __init__.py
src/pan3d/viewer/module/assets/: style.css
src/pan3d/viewers/: catalog.py  preview.py
src/pan3d/widgets/: __init__.py  clip_slice_control.py  color.py  color_by.py  data_information.py  data_origin.py  error_alert.py  level_of_detail.py  pan3d_view.py  save_dataset_dialog.py  scalar_bar.py  scale_control.py  slice_control.py  summary_toolbar.py  time_navigation.py  vector_property_control.py
src/pan3d/xarray/: __init__.py  accessor.py  algorithm.py  datasets.py  io.py
src/tests/: test_import.py
src/trame/widgets/: pan3d.py
tests/: conftest.py  test_bookmarks.py  test_builder.py  test_config.py  test_viewer.py  test_xarray.py
trame-exploration/: .gitignore  InteractiveViz.ipynb  README.md  trame_viewer.py
