[project]
name = "pan3d"
version = "0.9.2"
description = "Utility package for processing and visualizing 3D datasets"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "aiohttp>=3.9",
    "dask>=2023.10",
    "fsspec>=2023.9",
    "netCDF4>=1.6",
    "pyvista>=0.43",
    "pyvista-xarray>=0.1",
    "requests>=2.31",
    "xarray>=2023.8",
    "zarr>=2.16",
]
requires-python = ">=3.9"
readme = "docs/README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
geotrame = [
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vuetify>=2.4",
    "geovista>=0.4",
]
esgf = [
    "intake-esgf>=2024.1",
]
pangeo = [
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
]
all = [
    # viewer
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vuetify>=2.4",
    "geovista>=0.4",

    # esgf
    "intake-esgf>=2024.1",

    # pangeo
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
]

[project.scripts]
geotrame = "pan3d.serve_geotrame:serve"
slice-explorer = "pan3d.explorers.slice_explorer:main"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pan3d = [
    "**/module/serve/*.js",
    "**/ui/custom.css",
    "**/utils/*.json"
]

[tool.semantic_release]
version_variables = [
    "pan3d/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
