[project]
name = "pan3d"
version = "0.11.1"
description = "Utility package for processing and visualizing 3D datasets"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    # viz
    "vtk>=9.4.0rc3",

    # catalog handling
    "requests>=2.31",
    "aiohttp", # <= url catalog

    # XArray
    "xarray[io, parallel]>=2023.8",
]
requires-python = ">=3.9"
readme = "docs/README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
viewer = [
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vtklocal",
    "trame-vuetify>=2.4",
]
esgf = [
    "intake-esgf>=2024.1",
]
pangeo = [
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
]
all = [
    # viewers/explorers
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vtklocal",
    "trame-vuetify>=2.4",

    # esgf
    "intake-esgf>=2024.1",

    # pangeo
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
]

[project.scripts]
xr-viewer = "pan3d.viewers.preview:main"
xr-catalog = "pan3d.viewers.catalog:main"
xr-slicer = "pan3d.explorers.slicer:main"
xr-globe = "pan3d.explorers.globe:main"
xr-contour = "pan3d.explorers.contour:main"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project.entry-points."xarray.backends"]
vtk = "pan3d.xarray.io:VTKBackendEntrypoint"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pan3d.xarray.errors.DataCopyWarning",
]


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pan3d = [
    "**/module/serve/*.js",
    "**/ui/custom.css",
    "**/ui/css/*",
    "**/utils/*.json",
    "**/utils/data/**"
]

[tool.semantic_release]
version_variables = [
    "pan3d/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
