[project]
name = "pan3d"
version = "1.1.5"
description = "Utility package for processing and visualizing 3D datasets"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    # viz
    "vtk>=9.4.2",

    # catalog handling
    "requests>=2.31",
    "aiohttp", # <= url catalog

    # XArray
    "xarray[io, parallel]>=2023.8",
]
requires-python = ">=3.9"
readme = "docs/README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
viewer = [
    "trame>=3.9",
    "trame-client>=3.9.1",
    "trame-vtk>=2.8.15",
    "trame-vtklocal>=0.12.2",
    "trame-vuetify>=3.0.1",
]
esgf = [
    "intake-esgf>=2024.1",
]
pangeo = [
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
    "zarr<3", # support PFlotran data loading from spec
]
all = [
    # viewers/explorers
    "trame>=3.9",
    "trame-client>=3.9.1",
    "trame-vtk>=2.8.15",
    "trame-vtklocal>=0.12.2",
    "trame-vuetify>=3.0.1",

    # esgf
    "intake-esgf>=2024.1",

    # pangeo
    "intake==0.7.0",  # latest has plugin errors
    "intake-xarray>=0.7",
    "intake-esm>=2023.11",
    "s3fs>=2024.2",
    "gcsfs>=2024.2",
    "zarr<3", # support PFlotran data loading from spec
]
dev = [
    "pytest >=6",
    "pre-commit",
    "ruff",
]

[project.scripts]
xr-viewer = "pan3d.viewers.preview:main"
xr-catalog = "pan3d.viewers.catalog:main"
xr-slicer = "pan3d.explorers.slicer:main"
xr-globe = "pan3d.explorers.globe:main"
xr-contour = "pan3d.explorers.contour:main"
xr-analytics = "pan3d.explorers.analytics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/src/trame/**/*.py",
  "/src/pan3d/**/*.py",
  "/src/pan3d/**/module/serve/*.js",
  "/src/pan3d/**/ui/custom.css",
  "/src/pan3d/**/ui/css/*",
  "/src/pan3d/**/utils/*.json",
  "/src/pan3d/**/utils/data/**"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pan3d",
    "src/trame",
]

[project.entry-points."xarray.backends"]
vtk = "pan3d.xarray.io:VTKBackendEntrypoint"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pan3d.xarray.errors.DataCopyWarning",
]

[tool.semantic_release]
version_variables = [
    "src/pan3d/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[tool.uv]
dev-dependencies = [
  "pan3d[all,dev]",
]

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "SIM117",   # using single nested with
  "EM101",    # not always convenient
  "UP031",    # useful to skip {{}} hell
  "SIM118",   # point_data/cell_data don't actually behave like dict yet 9.5 should fix that
  # To be clean
  "ARG002",
  "RUF012",
  "ARG001",
  "T201",
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"examples/**" = ["T201"]
