[metadata]
name = pan3d
version = 1.0.0
description = Utility package for processing and visualizing 3D datasets
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    vtk
    zarr
    netCDF4
    xarray
    pyvista
    pyvista-xarray >=0.1.2
    matplotlib

[options.entry_points]
console_scripts =
    pan3d-viewer = pan3d.viewer.__main__:main
jupyter_serverproxy_servers =
    pan3d-viewer = pan3d.viewer.jupyter:jupyter_proxy_info

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
